added the crud for customers entity, added result pattern and added generic validators etc

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -16,4 +16,12 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Warehouses\" />
+    <Folder Include="Products\" />
+    <Folder Include="Shipments\" />
+    <Folder Include="PickLists\" />
+    <Folder Include="Orders\" />
+  </ItemGroup>
+
 </Project>
