--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,8 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.4",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
