--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="DTOs\" />
     <Folder Include="Warehouses\" />
     <Folder Include="Products\" />
     <Folder Include="Shipments\" />
